<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for a "Sell Item" button [CHAR LIMIT=20] -->
    <string name="sell_item">Sell Item</string>

    <!-- Label for a "Delete Item" button [CHAR LIMIT=20] -->
    <string name="delete_item">Delete Item</string>

    <!-- Label for a "Contact Supplier" button [CHAR LIMIT=20] -->
    <string name="contact_supplier">Contact Supplier</string>

    <!-- Items in stock [CHAR LIMIT=20] -->
    <string name="items_in_stock">In Stock: </string>

    <!-- Item's price [CHAR LIMIT=20] -->
    <string name="items_price">Item Price: $</string>

    <!-- Increase button "+1" [CHAR LIMIT=20] -->
    <string name="increase_button">+1</string>

    <!-- Decrease button "-1"[CHAR LIMIT=20] -->
    <string name="decrease_button">-1</string>

    <!-- "Add Item" button [CHAR LIMIT=20] -->
    <string name="add_item_button">Add Item</string>

    <!-- Toast message showing successful quantity update [CHAR LIMIT=30] -->
    <string name="quantity_updated">Quantity updated</string>

    <!-- Toast message saying that items are out of stock [CHAR LIMIT=NONE] -->
    <string name="no_more_items">There no more items available</string>

    <!-- Error when selling an item [CHAR LIMIT=NONE] -->
    <string name="error_selling_item">Error While Selling Item</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Fake Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier">Supplier</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_phone">Supplier Phone #</string>

    <!-- Text in the Manifest "Add a product" [CHAR LIMIT=30] -->
    <string name="add_a_product">Add a Product</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Oops&#8230; No items stored</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Please add a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_save_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_save_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when quantity field is empty [CHAR LIMIT=NONE] -->
    <string name="editor_quantity_empty">Quantity field is empty</string>

    <!-- Toast message in editor when quantity field equal zero or less [CHAR LIMIT=NONE] -->
    <string name="editor_quantity_zero">Quantity field is already at 0</string>

    <!-- Toast message asking a user to enter product info [CHAR LIMIT=NONE] -->
    <string name="editor_enter_product_info">Please enter product info</string>

    <!-- Toast message asking a user to enter product name [CHAR LIMIT=NONE] -->
    <string name="editor_enter_name">Please enter product name</string>

    <!-- Toast message asking a user to enter product price [CHAR LIMIT=NONE] -->
    <string name="editor_enter_price">Please enter product price</string>

    <!-- Toast message asking a user to enter price that is equal to or higher than "0" [CHAR LIMIT=NONE] -->
    <string name="editor_enter_correct_price">Please enter price that is equal to or
        higher than a "0"</string>

    <!-- Toast message asking a user to enter price that is an Integer value [CHAR LIMIT=NONE] -->
    <string name="editor_enter_integer_price">Please enter price that is an Integer</string>

    <!-- Toast message asking a user to enter quantity that is not < 0 [CHAR LIMIT=NONE] -->
    <string name="editor_enter_correct_quantity">Please enter product quantity that is equal to or
        higher than a "0"</string>

    <!-- Toast message asking a user to enter quantity that is an Integer value [CHAR LIMIT=NONE] -->
    <string name="editor_enter_integer_quantity">Please enter quantity that is an Integer</string>

    <!-- Toast message asking a user to enter quantity amount [CHAR LIMIT=NONE] -->
    <string name="editor_enter_quantity">Please enter product quantity</string>

    <!-- Toast message asking a user to enter supplier name [CHAR LIMIT=NONE] -->
    <string name="editor_enter_supplier">Please enter supplier name</string>

    <!-- Toast message asking a user to enter supplier phone number [CHAR LIMIT=NONE] -->
    <string name="editor_enter_supplier_phone">Please enter supplier phone number</string>
</resources>
