<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_price"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_quantity"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_supplier"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_supplier_phone"
        android:inputType="textCapWords" />
</LinearLayout>